# sss

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
examples/: basic_example.c  proto_example.cpp
include/serializer/: serializer.h
include/sss/: log.h  serializer.h  sss.h  tlv.h
src/: serializer.c  tlv.c
tests/: CMakeLists.txt  common.c  common.h  serialize_tests.c  tlv_encode_decode_tests.c
tests/unity/: unity_config.h
